--- a/OrdosName/.classpath
+++ b/OrdosName/.classpath
@@ -2,11 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Users/HSAR/Documents/Programming (Java)/Bukkit/bukkit-1.4.6-R0.4-20130102.060147-2.jar">
+	<classpathentry kind="lib" path="C:/Users/Owner/Documents/Programming (Java)/bukkit-1.7.9-R0.2.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="http://jd.bukkit.org/apidocs/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/HSAR/Documents/Programming (Java)/Towny.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Documents/Programming (Java)/Towny.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
