Updated to MC 1.8, add WorldGuard integration. Fixed a number of places where UUID isn't being correctly used Fixed a number of confusing title/suffix mixups Made Towny and WorldGuard titles/suffixes their own fields General reliability improvements

--- a/OrdosName/config.yml
+++ b/OrdosName/config.yml
@@ -10,7 +10,9 @@ pluginvars:
   # Time (in days) before entries are eligible to be dropped from the database (default 1 month, 0 sets never)
   dbcleanuptime: 30
   # Towny integration
-  usetowny: false
+  useTowny: false
+  # WorldGuard integration
+  useWorldGuard: false
 dbvars:
   # Database system. Available options: "SQL" or "SQLite"
   database: 'SQLite'
